--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-    background-image: url(/imagens/fundo.jpg);
+    background: #E5E5E5;
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     font-size: 32px;
@@ -18,34 +18,37 @@ main {
     margin-left: 80px;
 }
 
+
+
+
 .texto-area {
     border: none;
-    color: #1a9def;
+    color: #0A3871;
     margin-top: 90px;
     text-transform: lowercase;
     resize: none;
 }
 
-::placeholder {color: #1a9def;}
+::placeholder {color: #0A3871;}
     .texto-area:focus {
         outline: none;
     }
 
 .mensagem {
-    background: linear-gradient(rgb(98, 69, 16), rgb(12, 12, 235));
+    background: white;
     background-image: url(/imagens/lateral.png);
     background-repeat: no-repeat;
     border: none;
     border-radius: 24px;
-    color: #fe5107;
+    color: #0A3871;
     margin-left: 98px;
-    margin-top: 20px;
-    padding-left: 20px;
-    position: relative;
+    margin-top: 10px;
+    padding-left: 30px;
+    position: fixed;
     resize: none;
 }
 
-.mensagem {
+.mensagem:focus {
     outline: none;
 }
 
@@ -55,10 +58,10 @@ main {
 }
 
 .btn-desencriptar {
-    background: #ce8d3371;
-    border: 1px solid #946611c6;
+    background: #D8DFE8;
+    border: 1px solid #0A3871;
     border-radius: 24px;
-    color: #e4c98b;
+    color: #0A3871;
     cursor: pointer;
     height: 67px;
     margin-left: 30px;
@@ -74,7 +77,7 @@ main {
     background-color: #0A3871;
     border: 1px solid #0A3871;
     border-radius: 24px;
-    color: rgb(155, 181, 234);
+    color: white;
     cursor: pointer;
     height: 67px;
     width: 328px;
@@ -90,25 +93,33 @@ main {
 .btn-copiar {
     border: 1px solid #0A3871;
     border-radius: 24px;
-    color: rgb(155, 181, 234);
+    color: #0A3871;
     cursor: pointer;
     height: 67px;
-    margin-left: 850px;
-    margin-top: 408px;
-    position: absolute;
     width: 336px;
+    position: absolute;
+    margin-left: 125px;
+    margin-top: 420px; 
+}
+
+.btn-copiar:hover {
+    background: #579bef98;
+    color: #021d24d5;
+    transition: 1s;
 }
 
 .informacao {
-    color: #c6b269;
+    color: #495057;
     font-size: 18px;
+    position: relative ;
+    top: 30px;
 }
 
 h6 {
-font-size: 15px;
-display: block;
-
-}
+    font-size: 15px;
+    display: block;
+    
+    }
 
 
 
