--- a/style.css
+++ b/style.css
@@ -1,32 +1,42 @@
-* {
-    background: #E5E5E5;
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    font-size: 32px;
-    line-height: 150%;
+*body{
+    width: 1440px;
+    height: 1024px;   
 }
 
 .logoalura {
-    margin-left: 10px;
-    padding-top: 10px;
-    width: 2%;
-}
-
-main {
     display: flex;
-    margin-bottom: 50px;
-    margin-left: 80px;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 40px;
+    position: absolute;
+    width: 50px;
+    height: 48px;
+    left: 40px;
+    top: 40px;
 }
 
-
-
+.container {
+    background: rgb(202, 220, 238);
+    display: flex;
+    border-radius: 20px; 
+}
 
 .texto-area {
+    width: 580px;
+    height: 288px;
+    margin-top: 158px;
+    margin-left: 50px;
     border: none;
-    color: #0A3871;
-    margin-top: 90px;
-    text-transform: lowercase;
     resize: none;
+    background: rgb(215, 226, 236);
+    border-radius: 20px;
+    text-transform: lowercase;
+}
+
+.texto-area {
+    color: #0A3871;
+    font-size: 25px;
 }
 
 ::placeholder {color: #0A3871;}
@@ -34,41 +44,53 @@ main {
         outline: none;
 }
 
-.aviso1{
-    text-align: center;
+.aviso2 :first-child {
+    width: 300px;
     height: 20px;
-    width: 400px;
-    
+    position: absolute;
+    top: 390px;
+    right: 95px;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 280px;
+    color: #495057;
+    font-size: 25px;   
 }
 
-.aviso {
-    font-size: 20px;
+.aviso2 :last-child {
+    right: 110px;
+    top: 430px;
+    position: absolute;
+    width: 300px;
+    height: 30px;
+    text-align: center;
     color: #495057;
-    position: relative;
-    
+    font-size: 16px;
 }
 
-p {
+.imagem-lateral {
+    background: transparent;
     position: relative;
-    font-size: 15px;
-    color: #495057;
-    left: 820px;
-    bottom: 190px;
+    left: 190px;
+    top: 180px;
+    height: 250px;
+    width: 250px;   
 }
 
 .mensagem {
-    background: transparent;
-    background-image: url(./imagens/lateral.png);
-    background-repeat: no-repeat;
-    border: none;
-    border-radius: 24px;
+   background: rgb(215, 226, 236);
+   width: 300px;
+   height: 450px;
+   margin-top: -220px;
+   margin-left: 160px;
+   border: none; 
+   resize: none;
+   border-radius: 20px;
+}
+
+.mensagem {
     color: #0A3871;
-    margin-left: 98px;
-    margin-top: 10px;
-    padding-left: 30px;
-    position: relative;
-    resize: none;
-   
+    font-size: 25px;
 }
 
 .mensagem:focus {
@@ -77,7 +99,8 @@ p {
 
 .botoes {
     display: flex;
-    margin-top: 18px;
+    margin-left: 30px;
+    margin-bottom: 30px;   
 }
 
 .btn-desencriptar {
@@ -89,7 +112,9 @@ p {
     height: 67px;
     margin-left: 30px;
     width: 328px;
+    font-size: 30px;
 }
+
 .btn-desencriptar:hover {
     background: #0A3871;
     color: #ce8d3371;
@@ -104,7 +129,7 @@ p {
     cursor: pointer;
     height: 67px;
     width: 328px;
-
+    font-size: 30px;
 } 
 
 .btn-encriptar:hover {
@@ -114,17 +139,25 @@ p {
 }
 
 .btn-copiar {
-    border: 1px solid #0A3871;
-    border-radius: 24px;
-    color: #0A3871;
-    cursor: pointer;
+    width: 328px;
     height: 67px;
-    width: 336px;
+    border: 1px solid #D8DFE8;
+    border-radius: 24px;
+    margin-top: 45px;
+    margin-left: 160px;
+    font-size: 30px;
+    color: #a7c6ec98;
     position: relative;
-    margin-left: -380px;
-    margin-bottom: -150px; 
+    background: #0A3871;
+    display: block; 
 }
 
+.btn-copiar:hover {
+    background: #579bef98;
+    color: #040b0dd5;
+    transition: 1s;
+}  
+ 
 .btn-copiar:hover {
     background: #579bef98;
     color: #021d24d5;
@@ -133,14 +166,9 @@ p {
 
 .informacao {
     color: #495057;
-    font-size: 18px;
+    font-size: 22px;
     position: relative ;
     top: 30px;
+    margin-left: 40px;
 }
-
-h6 {
-    font-size: 15px;
-    display: block;
-    
-}
-
+ 
