--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@
 .container {
     background: rgb(202, 220, 238);
     display: flex;
-    border-radius: 20px; 
+    border-radius: 20px;
+    
 }
 
 .texto-area {
@@ -157,7 +158,7 @@
     color: #040b0dd5;
     transition: 1s;
 }  
- 
+
 .btn-copiar:hover {
     background: #579bef98;
     color: #021d24d5;
@@ -170,5 +171,16 @@
     position: relative ;
     top: 30px;
     margin-left: 40px;
+
+}
+
+.icones :first-child{
+    width:  100px;
+    height: 50px;
+    color: #0A3871;
+}
+.icones :first-child {
+    margin-top: 20px;
+    margin-right: 10px;
 }
  
